# IPOID_addon1

./: .gitignore  README.md
cpp/: CMakeLists.txt  IPOID_addon1_cpp.pro  cpp.code-workspace
cpp/include/: calibrationresultwidget.h  calibrationwidget.h  eyetrackerwrapper.h  imageshowwidget.h  infodialog.h  myconfig.h  myeyedata.h  settingdialog.h  startpanel.h
cpp/src/: calibrationresultwidget.cpp  calibrationwidget.cpp  eyetrackerwrapper.cpp  imageshowwidget.cpp  infodialog.cpp  main.cpp  myconfig.cpp  settingdialog.cpp  startpanel.cpp
cpp/ui/: infodialog.ui  settingdialog.ui  startpanel.ui
eyetracker_test_python/: Tobii_Pro_SDK_Demos.py  eyetracker_wrap.py  invalid_gaze_data_demo.json  valid_gaze_data_demo.json
pyqt/: IPOID_addon1.pyproject  application_main.py  appmain.py  calibration_result_widget.py  calibration_widget.py  config.ini  config_template.ini  config_template.json  eyetracker_wrap.py  global_config.py  image_show_widget.py  info_dialog.py  run.bat  setting_dialog.py  start_panel.py
pyqt/ui/: calibration_panel.ui  calibration_result.ui  frequency_setting.ui  frequency_setting2.ui  info_dialog.ui  setting_dialog.ui  start_panel.ui  ui_frequency_setting.py  ui_frequency_setting2.py  ui_info_dialog.py  ui_setting_dialog.py  ui_start_panel.py
score/: CMakeLists.txt  IPOID_addon1_score.pro
score/include/: imageshowwidget.h  myconfig.h  mytypedef.h  scorepage.h  settingdialog.h
score/src/: calibrationwidget.cpp  eyetrackerwrapper.cpp  imageshowwidget.cpp  infodialog.cpp  myconfig.cpp  scorepage.cpp  settingdialog.cpp  startpanel.cpp
(+4 files in other folders)
